deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: users-app
  template:
    metadata:
      labels:
        app: users-app
    spec:
      containers:
      - name: users
        image: krapoed/otus_arch:v0.1
        ports:
          - name: web
            containerPort: 80
        readinessProbe:
          httpGet:
            port: 80
            path: /health
          initialDelaySeconds: 5
          periodSeconds: 5
