service.yml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  type: NodePort
  selector:
    app: users-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
