ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /dz_sianiuk(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 9000
